# coga

./: .gitignore  AGENTS.md  CLAUDE.md  COMMANDS.md  README.md  Work-Plan.md  blackboard-template.md  migrate-to-coga.sh  prompt-interactive.md  prompt.md  protocol-auto.md  protocol-interactive.md  protocol.md  pyproject.toml  relay.local.toml.empty  relay.local.toml.example  relay.toml  relay.toml.empty  relay.toml.example  requirements.txt  rules.md
.github/workflows/: release.yml
archive/next-app/: CLAUDE.md  QUICK_START.md  README_RELAY.md  SYSTEM_DESIGN.md  V2_ROADMAP.md  package-lock.json
cli/: relay
cli/relay_cli/: __init__.py  __main__.py  blackboard.py  config.py  logfile.py  slack.py  tasks.py  ticket.py
coga/: .gitignore  coga.toml  log.md
coga-os/: coga.toml
coga-os/tasks/: async-park-and-continue-on-block.md  branch-cleanup-as-recurring-tasks.md  document-the-automerge-bare-pr-line-format-require.md  dream-debug-cleanup-orphan-markers.md  fix-optioninfo-sentinel-crash-in-on-demand-recurri.md  move-ticket-authoring-out-of-core.md
coga/tasks/: 1password-op-secret-references-and-relay-secret-ge.md  add-a-docs-oriented-review-workflow-for-docs-only.md  add-a-nothing-to-implement-close-path-so-already-s.md  add-a-status-canceled-for-ticket.md  add-ci-to-generate-package-update-automatically-or.md  add-coga-ticket-existing-slug-scan.md  agree-the-core-vs-skills-move-list-then-execute.md  allow-creation-of-coga-dir-in-subdir.md  allow-open-pr-when-the-recorded-worktree-is-the-pr.md  anonymous-install-telemetry-opt-out-no-pii.md  append-queue-execution-guidance-to-recurring-agent.md  async-park-and-continue-on-block.md  audit-chat-and-build-are-core-free.md  auto-persist-dirty-launch-worktrees-to-pushed-bran.md  autocleanup-dir-recurring-tasks.md  awaken-recurring-auto-blocked-tasks.md  better-readme.md  block-unblock-and-megalaunch.md  branch-cleanup-as-recurring-tasks.md  bug-if-not-on-megalaunch-don-t-block-ask.md  build-an-order-for-megqlaunch.md  change-log-format-union-merge-in-git.md  check-we-can-extend-coga-recurring.md  clean-up-docs-directory.md  clean-up-workflows-and-make-sure-they-re-in-bootst.md  cleanup-core-commands.md  coga-cli-cutover.md  coga-rename-follow-ups-post-repo-rename.md  coga-usage-cannot-locate-claude-transcript-or-sess.md  commands-as-tickets-open-pr-pilot.md  commit-post-session-coga-writes-usage-record-spool.md  create-vault-and-service-account-for-mid-trust-sec.md  create-vault6-and-service-account-for-high-trust-s.md  decide-what-belongs-in-core-vs-skills-and-move-ski.md  decouple-autoclose-sweep-test-from-baked-in-period.md  distill-git-conflict-errors-and-stop-compounding-d.md  document-cross-machine-sandbox-dev-loop-friction-i.md  document-the-automerge-bare-pr-line-format-require.md  drain-pending-auto-tickets-with-leftover-session-b.md  dream-cleanup-orphan-markers-w29.md  (+99 more)
docs/: README.md  agent-tool-buckets.md  cli-extension-audit.md  cli-extension-external-surface.md  coga-additions.md  coga-unique.md  coga-vs-paperclip.md  concepts.md  design.md  development.md  getting-started.md  market-thesis.md  migrating-to-coga.md  operations.md  reference.md  relay-additions.md  relay-unique.md  relay-vs-paperclip.md  releasing.md  spec-audit.md  spec.md  telemetry.md  velocity-report.md  vision.md
docs/competition/: backlog-report.md  conductor-report.md  cursor-report.md  dust-report.md  linear-agent-report.md  openclaw-report.md  paperclip-report.md  superset-report.md
example/coga/: coga.local.toml  coga.toml  log.md
example/relay-os/: .gitattributes  context.md  relay.local.toml  relay.toml  rules.md
pypi-placeholder/: .gitignore  PUBLISH.md  README.md  pyproject.toml
pypi-placeholder/src/relay_os/: __init__.py
recurring/: brex-unmapped-monthly.md  rd-tax-weekly.md  sf-forms-annual.md  xero-reconciliation-monthly.md
relay-cli/: .gitignore  README.md  pyproject.toml
relay-cli/src/relay_os/: __init__.py  cli.py  composer.py  config.py  frontmatter.py  slack.py
relay-cli/src/relay_os/commands/: create.py  feed.py  init.py  launch.py  panic.py  status.py  step.py
relay-cli/src/relay_os/templates/: cron.sh  relay.local.toml.empty  relay.local.toml.example  relay.toml  relay.toml.empty  relay.toml.example  rules.md
relay-cli/tests/: conftest.py  test_cli.py  test_config.py  test_frontmatter.py  test_init.py
relay-os/: .gitignore  log.md  relay.local.toml  relay.toml
relay-os/.agent-skills/: _template  google-agents-cli-adk-code  google-agents-cli-deploy  google-agents-cli-eval  google-agents-cli-observability  google-agents-cli-publish  google-agents-cli-scaffold  google-agents-cli-workflow
relay-os/.relay/: RELAY_PIN
relay-os/recurring/: _template.md  dream.md  relay-dev-update.md  weekly-dream.md
relay-os/scripts/: dream-body.md  dream-run.sh
relay-os/tasks/: 1password-op-secret-references-and-relay-secret-ge.md  200-single-file-task-format-section-aware-compose.md  audit-chat-and-build-are-core-free.md  coga-cli-cutover.md  log.md  (+33 more)
scripts/: cron.sh  human_minutes.py  verify-clean-install-container.sh  verify-clean-install.sh
telemetry-endpoint/: README.md  deploy.sh  main.py
tests/: conftest.py  test_aliases.py  test_atomicio.py  test_authoring.py  test_autobimp_smoke.py  test_autoclose.py  test_autoclose_sweep.py  test_automerge.py  test_blackboard.py  test_blocker_reminders.py  test_bootstrap_ticket_skill_template.py  test_branchcleanup.py  test_branchsweep.py  test_browser_automation_bootstrap.py  test_clean_install_gate.py  test_cli.py  test_code_implement_skill.py  test_commands.py  test_compose.py  test_config.py  test_create.py  test_dependencies.py  test_digest.py  test_done_marker_emission.py  test_dream.py  test_dream_cleanup_orphan_markers.py  test_dream_retro_done_ticket.py  test_dream_skill_scripts.py  test_dream_skill_update.py  test_dream_validate_drift.py  test_dream_worker_templates.py  test_git.py  test_gmail_skill.py  test_google_calendar_skill.py  test_headless.py  test_human_minutes_script.py  test_init.py  test_launch.py  test_launch_auto.py  test_launch_restart.py  (+43 more)
(+1866 files in other folders)
