[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coga"
version = "0.2.0"
description = "A way to organize agent work — a git-backed, markdown-first CLI for humans and AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [
  { name = "Coga contributors" },
]
keywords = ["agents", "cli", "workflow", "task-management", "markdown"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "PyYAML>=6",
  "tomli-w>=1",
  "croniter>=2",
  "requests>=2.31",
]

[project.optional-dependencies]
# Dev/test-only. `hatchling` is the build backend; it is required so
# `tests/test_packaging.py::test_wheel_includes_bootstrap_batteries` actually
# builds a wheel instead of `importorskip`-skipping (which masked the clean-
# checkout wheel build failure). Coga never imports hatchling at runtime, so
# it stays out of `requirements.txt` / `[project.dependencies]`.
test = [
  "pytest>=8",
  "hatchling>=1.18",
]

[project.scripts]
coga = "coga.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/coga"]
# Never ship local build artifacts that appear under the packaged template
# tree when `coga init` is run inside the fixture: a vendored CLI/venv
# (.coga, .venv) and bytecode caches. Without this, a wheel built from a
# dirty working tree drags in ~40MB of stale venv — which copy_fresh_templates
# would then replicate into every fresh `coga init`.
#
# The `bootstrap/` exclude is paired with the force-include below: hatchling's
# package-aware file selection (`packages`) silently drops pure-data
# subdirectories — skill dirs under `bootstrap/skills/` that contain only a
# SKILL.md and no `.py` (ticket-diagnostic, retro/…). Before #259 a blanket
# `force-include` masked this; dropping it shipped wheels missing bundled skills. We
# exclude the whole `bootstrap/` tree from the `packages` grab and force-include
# it back wholesale (a literal copy that ships every dir) — which also correctly
# ships `bootstrap/` even though the template `.gitignore` marks it ignored
# (it's upstream-managed: gitignored in instantiated repos, but must ride in the
# wheel so `coga init` can lay it down).
exclude = [
  "**/.coga/**",
  "**/.venv/**",
  "**/__pycache__/**",
  "**/coga/bootstrap/**",
  # Paired with the `skills/_template` force-include below, exactly like
  # `bootstrap/`. On a clean checkout (no `coga init` symlinks under the
  # templates tree) the `packages` walk DOES grab `_template/SKILL.md`, which
  # then collides with the force-include and aborts the wheel build
  # ("A second file is being added to the wheel archive at the same path").
  # The symlink views in a dev tree only dedup that collision away by accident,
  # so we exclude the leaf from the walk and let the force-include be its single
  # deterministic shipper — matching the bootstrap exclude+force-include pairing.
  "**/coga/skills/_template/**",
]

[tool.hatch.build.targets.wheel.force-include]
"src/coga/resources/templates/coga/bootstrap" = "coga/resources/templates/coga/bootstrap"
# `skills/_template` is the same pure-data drop (a setup stub `coga init
# --update` refreshes); force-include it too. Scoped to the leaf so hatchling's
# walk never reaches the `.agent-skills`/`.claude`/`.codex` symlink views (which,
# when traversed, resolve to the real skill dirs and dedup them away).
"src/coga/resources/templates/coga/skills/_template" = "coga/resources/templates/coga/skills/_template"
