[project]
name = "relay-os"
version = "0.1.0"
description = "A blackboard for humans and agents — CLI for the Relay CompanyOS."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "FastJVM" },
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
relay = "relay_os.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
relay_os = ["templates/*.md", "templates/*.toml", "templates/*.sh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
